# autoclicker

./: .gitignore  README.md  requirements_dev.txt  setup.cfg
autoclicker/: __main__.py  autoclicker.py
