[metadata]
name = autoclicker
author = Vlad Bezden
author-email = vlad.bezden@gmail.com
version = 1.0.0
licence = MIT
long_description = file:README.md
requires-python = >= 3.6
classifiers =
    Environment :: Console
    Programming Language :: Python

[options]
install_requires =
    pyautogui
packages = find:

[options.entry_points]
console_scripts =
    autoclicker = autoclicker.autoclicker:main
